--- a/PingPong.Server/PingPong.Server.csproj
+++ b/PingPong.Server/PingPong.Server.csproj
@@ -7,6 +7,7 @@
 
   <ItemGroup>
     <PackageReference Include="NLog" Version="4.6.8" />
+    <PackageReference Include="System.Runtime.Loader" Version="4.3.0" />
   </ItemGroup>
 
   <PropertyGroup>
