--- a/PingPong.Server/PingPong.Server.csproj
+++ b/PingPong.Server/PingPong.Server.csproj
@@ -13,6 +13,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.0</TargetFramework>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
 </Project>
