--- a/PingPong.Services/PingPong.Services.csproj
+++ b/PingPong.Services/PingPong.Services.csproj
@@ -10,6 +10,7 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
+    <Nullable>enable</Nullable>
   </PropertyGroup>
 
 </Project>
