--- a/PingPong.Engine/PingPong.Engine.csproj
+++ b/PingPong.Engine/PingPong.Engine.csproj
@@ -11,6 +11,11 @@
     <PackageReference Include="MessagePack" Version="2.0.299-rc" />
     <PackageReference Include="Microsoft.CSharp" Version="4.6.0" />
     <PackageReference Include="NLog" Version="4.6.8" />
+    <PackageReference Include="System.Text.Json" Version="4.7.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\PingPong.HostInterfaces\PingPong.HostInterfaces.csproj" />
   </ItemGroup>
 
 </Project>
