Basic TLS support.

--- a/PingPong.Server/Host1.config.json
+++ b/PingPong.Server/Host1.config.json
@@ -4,12 +4,18 @@
 
     "NLogConfigFile": "NLog.config.xml",
 
+    "TlsSettings": {
+        "CertificateFile": "../Certificates/Test.p12",
+        "PasswordFile": "../Certificates/Password",
+        "AllowSelfSignedCertificates": true
+    },
+
     "ServiceAssemblies": [
         "../PingPong.Services/bin/Debug/netstandard2.1/PingPong.Services.dll"
     ],
 
     "KnownHosts": [
-        "tcp://localhost:10000",
+        "tls://localhost:10000",
         "tcp://localhost:10001"
     ],
 
