--- a/PingPong.Server/Host2.config.json
+++ b/PingPong.Server/Host2.config.json
@@ -13,7 +13,7 @@
     ],
 
     "KnownHosts": [
-        "tls://localhost:10000",
+        "tcp://localhost:10000",
         "tcp://localhost:10001"
     ],
 
