--- a/PingPong.Server/Gateway1.config.json
+++ b/PingPong.Server/Gateway1.config.json
@@ -2,6 +2,7 @@
     "Port": 10100,
     "InstanceId": 10,
     "Gateway": true,
+    "Serializer": "PingPong.Engine.SerializerJson",
 
     "NLogConfigFile": "NLog.config.xml",
 
