Preamble size optimized.

--- a/PingPong.Server/Host1.config.json
+++ b/PingPong.Server/Host1.config.json
@@ -4,6 +4,10 @@
 
     "NLogConfigFile": "NLog.config.xml",
 
+    "MessageAssemblies": [
+        "../PingPong.Messages/bin/Debug/netstandard2.1/PingPong.Messages.dll"
+    ],
+
     "ServiceAssemblies": [
         "../PingPong.Services/bin/Release/netstandard2.1/PingPong.Services.dll"
     ],
